# python-jsonlogging

./: .gitignore  .pre-commit-config.yaml  README.rst  setup.cfg  setup.py
.circleci/: config.yml
src/: jsonlogging.py
tests/: conftest.py
tests/fixtures/: config.yml
tests/perf/: test_perfs.py
tests/unit/: conftest.py  test__package_dirs.py  test_attribute_mapping.py  test_configurable.py  test_format_parsing_regexp.py  test_format_stack.py  test_logger.py
