[bdist_wheel]
universal = true


[check]
# metadata = true
# restructuredtext = true
# strict = true


[coverage:html]
directory = coverage/html

[coverage:report]
show_missing = true

exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
# skip_covered = true

[coverage:run]
branch = true
omit =
    conftest.py
    test_*.py
source =
    jsonlogging

[coverage:xml]
;; Used by the CI (so it can collect test-case-wise failure/success stats)
output = coverage/coverage.xml


[flake8]
max-line-length = 100
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/


[metadata]
name = jsonlogging
author = Nicolas CANIART
author-email = nicolas@caniart.net
description = JSON Formatter for Python logging
keywords = docker, testing, fixtures
long-description = file: README.rst, CHANGELOG.rst
license = GPLv2
license-file = COPYING
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved ::  License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/cans/python-jsonlogging
version = 0.1.0

[options]
include_package_data = true
install_requires =
    docker~=4.1
packages = find:
package_dir =
    =src
py_modules=
    jsonlogging
python_requires = >= 3.6, <3.8
setup_requires =
    setuptools~=41.6
    wheel
zip_safe = true

[options.extras_require]
dev =
    coverage
    pdbpp
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    pytest-mock
    Sphinx
    twine

[options.packages.find]
where = src

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[sdist]
formats = zip, gztar

[tool:pytest]
addopts = -v --ignore src --cov=jsonlogging
